[package]
name = "petty"
version = "0.1.0"
authors = ["Johan Mickos <johan.mickos@gmail.com>"]
license = "MIT"
repository = "https://github.com/jarlopez/petty"
description = """
Netty-like selector-driven event loop in Rust.
"""
categories = ["asynchronous"]

[lib]
name = "petty"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
bytes = "0.4"
futures = "0.1.23"
udt = "0.2.0"
libudt4-sys = "0.2.0"
crossbeam = "0.4.1"

[dev-dependencies]
env_logger = { version = "0.4", default-features = false }